# hopr-polkadot

./: .gitignore  Cargo.toml  README.md  index.ts  package.json
runtime/: Cargo.toml
runtime/src/: hopr.rs  lib.rs
runtime/wasm/: Cargo.toml  build.sh
runtime/wasm/src/: lib.rs
src/: chain_spec.rs  main.rs  service.rs
