[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'hopr-polkadot-runtime-wasm'
version = '1.0.0'
[dependencies.hopr-polkadot-runtime]
default-features = false
path = '..'

[features]
default = []
std = ['hopr-polkadot-runtime/std']

[workspace]
members = []

[lib]
crate-type = ['cdylib']
[profile.release]
lto = true
panic = 'abort'
